--- a/app/src/main/res/layout/expanding_layout.xml
+++ b/app/src/main/res/layout/expanding_layout.xml
@@ -8,7 +8,8 @@
     app:animation_duration="250"
     app:indicator_margin_left="16dp"
     app:indicator_margin_right="16dp"
-    app:indicator_size="26dp"
+    android:background="@color/white"
+    app:indicator_size="22dp"
     app:item_layout="@layout/expanding_item"
     app:separator_layout="@layout/separator_layout"
     app:show_animation="true"
