--- a/app/src/main/res/layout/expanding_item.xml
+++ b/app/src/main/res/layout/expanding_item.xml
@@ -3,27 +3,33 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:layout_width="match_parent"
-                android:layout_height="94dp">
+    android:layout_margin="10dp"
+
+                android:layout_height="75dp">
 
     <TextView
         android:id="@+id/title"
-        android:layout_width="wrap_content"
+        android:layout_width="340sp"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:fontFamily="@font/muli"
+
+
+        android:layout_toLeftOf="@+id/ivExpand_item"
+        android:layout_marginEnd="10dp"
         android:gravity="center_vertical|start"
-        android:textColor="@color/white"
-        android:textSize="22sp"
-        android:textStyle="italic"/>
+        android:textColor="@color/colorPrimary"
+        android:textSize="18sp"
+        />
 
     <ImageView
         android:id="@+id/ivExpand_item"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
+        android:layout_width="18dp"
+        android:layout_height="18dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:layout_marginEnd="20dp"
+        android:tint="@color/colorPrimary"
         android:layout_marginRight="20dp"
         app:srcCompat="@drawable/expand_button"/>
 
