--- a/app/src/main/res/layout/expanding_sub_item.xml
+++ b/app/src/main/res/layout/expanding_sub_item.xml
@@ -14,10 +14,10 @@
         android:layout_centerVertical="true"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        android:fontFamily="@font/muli"
+
         android:gravity="center_vertical"
-        android:textColor="@color/white"
-        android:textSize="18sp"
+        android:textColor="@color/colorPrimary"
+        android:textSize="16sp"
         android:textStyle="normal"/>
 
 <!--    <ImageView-->
