--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <color name="colorPrimary">#2E205E</color>
-    <color name="colorPrimaryDark">#2B45E7</color>
-    <color name="colorAccent">#3112A0</color>
+    <color name="colorPrimary">#FF005D</color>
+    <color name="colorPrimaryDark">#F0206D</color>
+    <color name="colorAccent">#ec407a</color>
+    <color name="codeBG">#ffebee</color>
 
-    <color name="colorBackground" tools:ignore="MissingDefaultResource">#241445</color>
-    <color name="separatorColor">#18102C</color>
+
+
+    <color name="colorBackground" tools:ignore="MissingDefaultResource">#FFFFFF</color>
+    <color name="separatorColor">#fff176</color>
 
     <color name="pink">#FF308E</color>
     <color name="orange">#FA9301</color>
