--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,4 +16,12 @@
         <item name="cardUseCompatPadding">true</item>
     </style>
 
+
+    <style name="AppThemeNo" parent="Theme.AppCompat.Light.NoActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">#7e6fe2</item>
+        <item name="colorPrimaryDark">#7e6fe2</item>
+        <item name="colorAccent">#FF4081</item>
+    </style>
+
 </resources>
