--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -536,7 +536,7 @@
             <com.nilprojects.androiduidesign.ExpandableLayout
                 android:id="@+id/expandableLayoutAnim"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/expandableViewHeight2Item"
+                android:layout_height="@dimen/expandableViewHeight"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 android:background="@color/cardBG"
@@ -573,6 +573,33 @@
 
                 <LinearLayout
                     android:id="@+id/llRipple"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal"
+                    android:padding="5dp">
+
+                    <ImageView
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:layout_margin="8dp"
+                        android:src="@drawable/icon" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:text="Ripple Background"
+                        android:textStyle="bold"
+                        android:textSize="16dp"
+                        android:textColor="@color/white" />
+                </LinearLayout>
+
+
+
+
+                <LinearLayout
+                    android:id="@+id/llTransAnim"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical"
