--- a/app/src/main/res/layout/fragment_code2.xml
+++ b/app/src/main/res/layout/fragment_code2.xml
@@ -6,6 +6,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Activities.TapBarMenu.Fragment.TapCode">
 
+
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fabRipGit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_margin="20dp"
+        android:layout_alignParentEnd="true"
+        android:src="@drawable/github_circle"
+        app:backgroundTint="@color/colorPrimaryDark"
+        app:fabSize="normal" />
+
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
