--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -230,6 +230,103 @@
 
         </LinearLayout>
 
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/CVMenu"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:cardCornerRadius="5dp"
+                app:cardElevation="5dp"
+                android:layout_margin="10dp" >
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="8dp">
+
+                    <ImageView
+                        android:id="@+id/imgMenu"
+                        android:src="@drawable/ic_ghost"
+                        android:layout_margin="5dp"
+                        android:tint="@color/colorPrimaryDark"
+                        android:layout_width="25dp"
+                        android:layout_height="25dp"/>
+
+                    <TextView
+                        android:text="Navigation Menu"
+                        android:layout_toRightOf="@+id/imgMenu"
+                        android:layout_centerVertical="true"
+                        android:layout_marginStart="5dp"
+                        android:textStyle="bold"
+                        android:textSize="18dp"
+                        android:textColor="@color/colorPrimary"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+                    <ImageView
+                        android:id="@+id/switcherMenu"
+                        android:src="@mipmap/arrow"
+                        android:layout_alignParentRight="true"
+                        android:layout_centerVertical="true"
+                        android:layout_margin="5dp"
+                        android:tint="@color/colorPrimary"
+                        android:layout_width="22dp"
+                        android:layout_height="22dp"/>
+
+                </RelativeLayout>
+
+
+
+            </androidx.cardview.widget.CardView>
+
+            <com.nilprojects.androiduidesign.ExpandableLayout
+                android:id="@+id/expandableLayoutMenu"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/expandableViewHeight"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:background="@color/cardBG"
+                android:orientation="vertical"
+                app:duration="350"
+                app:initialState="expand"
+                app:clickToToggle="true">
+
+
+                <LinearLayout
+                    android:id="@+id/llSideMenu"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal"
+                    android:padding="5dp">
+
+                    <ImageView
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:layout_margin="8dp"
+                        android:src="@drawable/icon" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:text="Side Menu"
+                        android:textStyle="bold"
+                        android:textSize="16dp"
+                        android:textColor="@color/white" />
+                </LinearLayout>
+
+
+            </com.nilprojects.androiduidesign.ExpandableLayout>
+
+
+        </LinearLayout>
+
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
