--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -43,7 +43,7 @@
     <color name="blue_grey_active">#607d8b</color>
     <color name="yellow_active">#ffeb3b</color>
     <color name="orange_active">#ff9800</color>
-    <color name="grey_active">#9e9e9e</color>
+    <color name="grey_active">#707070</color>
 
     <color name="red_inactive">#e57373</color>
     <color name="purple_inactive">#ba68c8</color>
