--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -18,4 +18,6 @@
     <dimen name="default_margin">32dp</dimen>
     <dimen name="circles_size">24dp</dimen>
 
+    <dimen name="sliding_menu_width">80dp</dimen>
+
 </resources>
