--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,7 +11,7 @@
     <dimen name="standard_margin_x2">16dp</dimen>
     <dimen name="banner_slider_settings_margin">20dp</dimen>
 
-
+    <dimen name="fullscreen_status_bar_height">0dp</dimen>
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
 
