--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,9 @@
 
 
 
+    <color name="textColorPrimary">#212121</color>
+    <color name="textColorSecondary">#757575</color>
+
     <color name="colorTransparent">#00ffffff</color>
     <color name="colorStart">#cb5ed9</color>
     <color name="colorEnd">#8463d4</color>
