--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -668,29 +668,29 @@
                 <!--                        android:textColor="@color/white" />-->
                 <!--                </LinearLayout>-->
 
-                <!--                <LinearLayout-->
-                <!--                    android:id="@+id/llSimple"-->
-                <!--                    android:layout_width="match_parent"-->
-                <!--                    android:layout_height="wrap_content"-->
-                <!--                    android:gravity="center_vertical"-->
-                <!--                    android:orientation="horizontal"-->
-                <!--                    android:padding="5dp">-->
+                                <LinearLayout
+                                    android:id="@+id/llLiquid"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:gravity="center_vertical"
+                                    android:orientation="horizontal"
+                                    android:padding="5dp">
 
-                <!--                    <ImageView-->
-                <!--                        android:layout_width="20dp"-->
-                <!--                        android:layout_height="20dp"-->
-                <!--                        android:layout_margin="8dp"-->
-                <!--                        android:src="@drawable/icon" />-->
+                                    <ImageView
+                                        android:layout_width="20dp"
+                                        android:layout_height="20dp"
+                                        android:layout_margin="8dp"
+                                        android:src="@drawable/icon" />
 
-                <!--                    <TextView-->
-                <!--                        android:layout_width="wrap_content"-->
-                <!--                        android:layout_height="wrap_content"-->
-                <!--                        android:layout_marginLeft="10dp"-->
-                <!--                        android:text="Simple Bottom Nav"-->
-                <!--                        android:textStyle="bold"-->
-                <!--                        android:textSize="16dp"-->
-                <!--                        android:textColor="@color/white" />-->
-                <!--                </LinearLayout>-->
+                                    <TextView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:layout_marginLeft="10dp"
+                                        android:text="Liquid Swipe"
+                                        android:textStyle="bold"
+                                        android:textSize="16dp"
+                                        android:textColor="@color/white" />
+                                </LinearLayout>
 
             </com.nilprojects.androiduidesign.ExpandableLayout>
 
