--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -18,6 +18,18 @@
     <dimen name="default_margin">32dp</dimen>
     <dimen name="circles_size">24dp</dimen>
 
+
+    <dimen name="fab_margin">16dp</dimen>
+    <dimen name="tap_target_menu_max_width">350dp</dimen>
+    <dimen name="example_button_width">140dp</dimen>
+    <dimen name="example_item_top_padding">8dp</dimen>
+    <dimen name="max_prompt_width">300dp</dimen>
+    <dimen name="centre_example_padding">90dp</dimen>
+    <dimen name="dp40">40dp</dimen>
+    <dimen name="dp60">60dp</dimen>
+    <dimen name="nav_header_vertical_spacing">8dp</dimen>
+    <dimen name="nav_header_height">160dp</dimen>
+
     <dimen name="sliding_menu_width">80dp</dimen>
 
     <dimen name="tool_bar_text_size">22sp</dimen>
