--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,6 +16,57 @@
     </style>
 
 
+
+    <style name="AppTheme.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="AppTheme.Dialog" parent="AppTheme">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:backgroundDimEnabled">true</item>
+        <item name="android:windowFrame">@null</item>
+        <item name="android:windowCloseOnTouchOutside">true</item>
+    </style>
+
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+    <style name="MaterialTapTargetPromptTheme">
+        <!--Add custom base styling in here -->
+    </style>
+
+    <!-- This style is an example of what can be changed and not necessarily what should be changed! -->
+    <style name="MaterialTapTargetPromptTheme.FabTarget" parent="MaterialTapTargetPromptTheme">
+        <item name="mttp_backgroundColour">@color/colorAccentPromptBackground</item>
+        <item name="mttp_focalColour">@color/colorPrimary</item>
+        <item name="mttp_primaryText">@string/FabTarget_primaryText</item>
+        <item name="mttp_secondaryText">@string/FabTarget_secondaryText</item>
+        <item name="mttp_primaryTextColour">@color/green_200</item>
+        <item name="mttp_secondaryTextColour">@color/orange_200</item>
+        <item name="mttp_target">@id/fab</item>
+        <item name="mttp_focalRadius">88dp</item>
+        <item name="mttp_primaryTextSize">10sp</item>
+        <item name="mttp_secondaryTextSize">22sp</item>
+        <item name="mttp_maxTextWidth">600dp</item>
+        <item name="mttp_textPadding">80dp</item>
+        <item name="mttp_focalToTextPadding">8dp</item>
+        <item name="mttp_textSeparation">0dp</item>
+        <item name="mttp_primaryTextTypeface">serif</item>
+        <item name="mttp_secondaryTextTypeface">monospace</item>
+        <item name="mttp_secondaryTextStyle">italic</item>
+        <item name="mttp_iconColourFilter">@color/green_200</item>
+    </style>
+
+
+
     <style name="CardView.SS" >
         <item name="android:layout_marginRight">4dp</item>
         <item name="android:layout_marginLeft">4dp</item>
