--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <color name="colorPrimary">#FF005D</color>
-    <color name="colorPrimaryDark">#F0206D</color>
-    <color name="colorAccent">#ec407a</color>
+<!--    <color name="colorPrimary">#FF005D</color>-->
+<!--    <color name="colorPrimaryDark">#F0206D</color>-->
+<!--    <color name="colorAccent">#ec407a</color>-->
+
+    <color name="colorPrimary">#0C5ED1</color>
+    <color name="colorPrimaryDark">#0D47A1</color>
+    <color name="colorAccent">#29B6FC</color>
+
     <color name="lightbg">#FFD3E0</color>
     <color name="codeBG">#ffebee</color>
     <color name="cardBG">#bb3a7a</color>
