--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,14 +4,14 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@android:color/white" >
-    
-    
+
+
     <androidx.cardview.widget.CardView
         android:id="@+id/tool"
-        android:elevation="2dp"
-        app:cardBackgroundColor="@color/colorPrimary"
         android:layout_width="match_parent"
-        android:layout_height="55dp" >
+        android:layout_height="55dp"
+        android:elevation="2dp"
+        app:cardBackgroundColor="@color/colorPrimary">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -19,11 +19,11 @@
 
             <ImageView
                 android:id="@+id/ivAbout"
-                android:src="@drawable/ic_local_library_black_24dp"
                 android:layout_width="30dp"
-                android:layout_marginEnd="12dp"
+                android:layout_height="match_parent"
                 android:layout_alignParentEnd="true"
-                android:layout_height="match_parent"/>
+                android:layout_marginEnd="12dp"
+                android:src="@drawable/ic_local_library_black_24dp" />
 
 
         </RelativeLayout>
@@ -42,7 +42,7 @@
         android:elevation="2dp"
         app:civ_border_width="2dp"
         app:civ_border_color="@color/white"
-        android:src="@drawable/ic_launcher_background"
+        android:src="@mipmap/ic_launcher_round"
         android:layout_centerHorizontal="true"
         android:layout_height="60dp"/>
 
