--- a/app/src/main/res/layout/bottom_sheet.xml
+++ b/app/src/main/res/layout/bottom_sheet.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:app="http://schemas.android.com/apk/res-auto"
 xmlns:tools="http://schemas.android.com/tools"
 android:id="@+id/navigation_view_layout"
@@ -13,79 +13,81 @@ app:layout_behavior="@string/bottom_sheet_behavior">
     android:id="@+id/navigation_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_below="@id/view2"
     android:layout_gravity="bottom"
     android:background="@color/white"
     android:layout_marginTop="4dp"
     android:paddingBottom="40dp"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintHorizontal_bias="0.0"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/view2"
     app:menu="@menu/bottom_nav_drawer_menu"
     app:theme="@style/NavigationDrawerStyle" />
 
-<TextView
-    android:id="@+id/ivShopName"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginStart="12dp"
-    android:layout_marginTop="16dp"
-    android:textColor="@color/colorPrimaryDark"
-    app:fontPath = "Bitter-Bold.ttf"
-    android:textSize="18sp"
-    android:text="@string/app_name"
-    android:textStyle="bold"
-    app:layout_constraintStart_toEndOf="@+id/ivProfilePic"
-    app:layout_constraintTop_toTopOf="parent"
-    tools:ignore="MissingPrefix" />
-
-<TextView
-    android:id="@+id/tvMobileNumber"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="2dp"
-    android:text="v1.2"
-    app:fontPath = "Bitter-Regular.ttf"
-    android:textColor="@color/colorAccent"
-    app:layout_constraintStart_toStartOf="@+id/ivShopName"
-    app:layout_constraintTop_toBottomOf="@+id/ivShopName"
-    tools:ignore="MissingPrefix" />
-
-<de.hdodenhof.circleimageview.CircleImageView
-    android:id="@+id/ivProfilePic"
-    android:layout_width="48dp"
-    app:civ_border_color="@color/md_blue_grey_200"
-    android:layout_height="48dp"
-    android:layout_marginStart="24dp"
-    android:src="@drawable/ic_launcher"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="@+id/ivShopName" />
-
-
-<View
-    android:id="@+id/view2"
-    android:layout_width="match_parent"
-    android:layout_height="2dip"
-    android:layout_marginTop="15dp"
-    android:background="#447e7e7e"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintHorizontal_bias="0.0"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/tvMobileNumber" />
-
-<ImageView
-    android:id="@+id/close_imageview"
-    android:layout_width="24dp"
-    android:layout_height="24dp"
-    android:layout_marginTop="8dp"
-    android:layout_marginEnd="16dp"
-    android:layout_marginBottom="8dp"
-    android:visibility="gone"
-    android:src="@drawable/cancel"
-    app:layout_constraintTop_toTopOf="@+id/ivShopName"
-    app:layout_constraintBottom_toBottomOf="@+id/tvMobileNumber"
-    app:layout_constraintEnd_toEndOf="parent"  />
 
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <View
+        android:id="@+id/view2"
+        android:layout_width="match_parent"
+        android:layout_below="@id/rl"
+        android:layout_height="2dip"
+        android:background="#447e7e7e"  />
+
+    <RelativeLayout
+        android:id="@+id/rl"
+        android:background="@color/white"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/ivProfilePic"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:layout_margin="10dp"
+            android:src="@mipmap/ic_launcher_round"
+            app:civ_border_color="@color/md_blue_grey_200"  />
+
+        <LinearLayout
+            android:layout_toRightOf="@id/ivProfilePic"
+            android:orientation="vertical"
+            android:background="@color/white"
+            android:layout_width="match_parent"
+            android:layout_marginTop="-10dp"
+            android:layout_centerVertical="true"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/ivShopName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/colorPrimaryDark"
+                app:fontPath = "Bitter-Bold.ttf"
+                android:textSize="18sp"
+                android:text="@string/app_name"
+                android:textStyle="bold"
+                app:layout_constraintStart_toEndOf="@+id/ivProfilePic"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:ignore="MissingPrefix" />
+
+            <TextView
+                android:id="@+id/tvMobileNumber"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="2dp"
+                android:text="v1.2"
+                app:fontPath = "Bitter-Regular.ttf"
+                android:textColor="@color/colorAccent"
+                app:layout_constraintStart_toStartOf="@+id/ivShopName"
+                app:layout_constraintTop_toBottomOf="@+id/ivShopName"
+                tools:ignore="MissingPrefix" />
+
+
+        </LinearLayout>
+
+
+    </RelativeLayout>
+
+
+
+
+
+
+</RelativeLayout>
